Revert "#14217: add landscape mode"

--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -80,7 +80,8 @@
         <!-- activity -->
         <activity
             android:name=".ui.NavigationActivity"
-            android:configChanges="locale"
+            android:configChanges="locale|screenSize|orientation"
+            android:screenOrientation="portrait"
             android:theme="@style/Theme.Topface.Navigation"
             android:windowSoftInputMode="stateAlwaysHidden|adjustResize">
             <intent-filter>
@@ -177,11 +178,15 @@
             android:theme="@style/Theme.Transparent" />
         <activity
             android:name=".ui.GiftsActivity"
+            android:screenOrientation="portrait"
             android:theme="@style/Theme.Topface.Gifts" />
-        <activity android:name=".ui.TopfaceAuthActivity" />
+        <activity
+            android:name=".ui.TopfaceAuthActivity"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".ui.CitySearchActivity"
             android:label="@string/edit_my_city"
+            android:screenOrientation="portrait"
             android:theme="@style/Theme.Topface.Light"
             android:windowSoftInputMode="stateVisible" />
         <activity
@@ -189,20 +194,25 @@
             android:theme="@style/Topface.Theme.TransparentActionBarActivity" />
         <activity
             android:name=".ui.edit.EditContainerActivity"
+            android:screenOrientation="portrait"
             android:theme="@style/Theme.Topface.Light" />
         <activity
             android:name=".ui.settings.SettingsContainerActivity"
-            android:parentActivityName=".ui.NavigationActivity">
+            android:parentActivityName=".ui.NavigationActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/Theme.Topface">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".ui.NavigationActivity" />
         </activity>
         <activity
             android:name=".ui.BanActivity"
+            android:screenOrientation="portrait"
             android:theme="@style/Theme.Topface.Ban" />
 
         <activity
             android:name=".ui.RestoreAccountActivity"
+            android:screenOrientation="portrait"
             android:theme="@style/Theme.Topface.RestoreAccountActivity" />
 
         <activity android:name=".ui.BlackListActivity" />
@@ -220,6 +230,7 @@
         <activity
             android:name=".ui.UserProfileActivity"
             android:parentActivityName=".ui.NavigationActivity"
+            android:screenOrientation="portrait"
             android:theme="@style/NoWindowAnimation">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
@@ -229,6 +240,7 @@
         <activity
             android:name=".ui.OwnProfileActivity"
             android:parentActivityName=".ui.NavigationActivity"
+            android:screenOrientation="portrait"
             android:theme="@style/NoWindowAnimation">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
@@ -238,6 +250,7 @@
         <activity
             android:name=".ui.OwnGiftsActivity"
             android:parentActivityName=".ui.NavigationActivity"
+            android:screenOrientation="portrait"
             android:theme="@style/Theme.Topface.Gifts">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
@@ -246,7 +259,8 @@
 
         <activity
             android:name=".ui.ComplainsActivity"
-            android:parentActivityName=".ui.NavigationActivity">
+            android:parentActivityName=".ui.NavigationActivity"
+            android:screenOrientation="portrait">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".ui.NavigationActivity" />
@@ -254,7 +268,8 @@
 
         <activity
             android:name=".ui.EditorBannersActivity"
-            android:parentActivityName=".ui.NavigationActivity">
+            android:parentActivityName=".ui.NavigationActivity"
+            android:screenOrientation="portrait">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".ui.NavigationActivity" />
@@ -262,7 +277,8 @@
 
         <activity
             android:name=".ui.EditorProfileActionsActivity"
-            android:parentActivityName=".ui.NavigationActivity">
+            android:parentActivityName=".ui.NavigationActivity"
+            android:screenOrientation="portrait">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".ui.NavigationActivity" />
@@ -271,6 +287,7 @@
         <activity
             android:name=".ui.RegistrationActivity"
             android:parentActivityName=".ui.NavigationActivity"
+            android:screenOrientation="portrait"
             android:windowSoftInputMode="stateHidden|adjustResize">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
@@ -280,6 +297,7 @@
         <activity
             android:name=".ui.PasswordRecoverActivity"
             android:parentActivityName=".ui.NavigationActivity"
+            android:screenOrientation="portrait"
             android:windowSoftInputMode="stateHidden|adjustResize">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
@@ -288,7 +306,8 @@
 
         <activity
             android:name=".ui.PurchasesActivity"
-            android:parentActivityName=".ui.NavigationActivity">
+            android:parentActivityName=".ui.NavigationActivity"
+            android:screenOrientation="portrait">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".ui.NavigationActivity" />
@@ -297,13 +316,16 @@
         <activity
             android:name=".ui.ComplainsMessageActivity"
             android:parentActivityName=".ui.ComplainsActivity"
+            android:screenOrientation="portrait"
             android:windowSoftInputMode="stateAlwaysVisible|adjustResize">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".ui.ComplainsActivity" />
         </activity>
 
-        <activity android:name=".ui.PaymentwallActivity" />
+        <activity
+            android:name=".ui.PaymentwallActivity"
+            android:screenOrientation="portrait" />
 
         <activity
             android:name="ru.ok.android.sdk.OkAuthActivity"
@@ -330,7 +352,8 @@
 
         <activity
             android:name=".ui.SMSInviteActivity"
-            android:parentActivityName=".ui.NavigationActivity">
+            android:parentActivityName=".ui.NavigationActivity"
+            android:screenOrientation="portrait">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".ui.NavigationActivity" />
