--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -165,6 +165,12 @@
             </intent-filter>
         </activity>
 
+        <!-- Facebook -->
+        <activity
+            android:name="com.facebook.FacebookActivity"
+            android:configChanges="keyboard|keyboardHidden|screenLayout|screenSize|orientation"
+            android:label="@string/app_name"
+            android:theme="@style/FullyTranslucent" />
         <activity
             android:name=".ui.AddToLeaderActivity"
             android:parentActivityName=".ui.NavigationActivity">
@@ -354,8 +360,6 @@
 
             </intent-filter>
         </activity>
-
-        <activity android:name="com.facebook.LoginActivity" />
 
         <activity
             android:name=".ui.SMSInviteActivity"
