--- a/build.gradle
+++ b/build.gradle
@@ -295,11 +295,8 @@ dependencies {
     debugCompile 'com.squareup.leakcanary:leakcanary-android:1.3.1'
     releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.3.1'
     qaCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.3.1'
-    // unity-ads
-    compile project(':unity-ads-1.5.6')
-    // pubnative
-    compile project(':pubnative-1.4.8')
-    // I-FREE dependency
+    compile 'com.topface.topface:pubnative-1.4.8@aar'
+    compile 'com.topface.topface:unity-ads-1.5.6@aar'
     ifreeCompile('com.ifree.monetize:monetization-library:2.2.5') {
         exclude group: "com.fasterxml.jackson.core"
         exclude module: "support-v4"
