--- a/build.gradle
+++ b/build.gradle
@@ -299,6 +299,7 @@ dependencies {
         exclude group: "com.fasterxml.jackson.core"
         exclude module: "support-v4"
     }
+    compile project(':unity-ads-1.5.6')
     ifreeCompile(
             [group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.3.3'],
             [group: 'com.fasterxml.jackson.core', name: 'jackson-annotations', version: '2.3.3'],
