--- a/settings.gradle
+++ b/settings.gradle
@@ -1,7 +1,7 @@
 //Имя проекта. Без этого будет использоваться имя папки
 rootProject.name = 'topface-android'
 //Topface sub projects
-include ':libs:IllustratedTextView', ':libs:statistics-android'
+include ':libs:IllustratedTextView', ':libs:statistics-android', ':unity-ads-1.5.6'
 //Third part libs
 include ':libs:PullToRefresh', ':libs:PhotoView'
 //Social networks
