--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -404,19 +404,6 @@
             </intent-filter>
         </receiver>
 
-        <!-- gcm -->
-        <service android:name=".GcmIntentService" />
-        <receiver
-            android:name=".utils.gcmutils.GcmBroadcastReceiver"
-            android:permission="com.google.android.c2dm.permission.SEND">
-            <intent-filter>
-                <action android:name="com.google.android.c2dm.intent.RECEIVE" />
-                <action android:name="com.google.android.c2dm.intent.REGISTRATION" />
-
-                <category android:name="com.topface.topface" />
-            </intent-filter>
-        </receiver>
-
         <!-- Amazon In-App Purchasing -->
         <!--suppress AndroidDomInspection -->
         <receiver
@@ -470,6 +457,38 @@
                 <action android:name="android.provider.Telephony.SMS_SEND" />
             </intent-filter>
         </receiver>
+
+        <!--gcm-->
+
+        <receiver
+            android:name="com.google.android.gms.gcm.GcmReceiver"
+            android:exported="true"
+            android:permission="com.google.android.c2dm.permission.SEND">
+            <intent-filter>
+                <action android:name="com.google.android.c2dm.intent.RECEIVE"/>
+                <category android:name="com.topface.topface"/>
+            </intent-filter>
+        </receiver>
+
+
+
+        <service
+            android:name="com.topface.topface.utils.gcmutils.GcmListenerService"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="com.google.android.c2dm.intent.RECEIVE"/>
+            </intent-filter>
+        </service>
+
+
+        <service
+            android:name="com.topface.topface.utils.gcmutils.InstanceIDListenerService"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="com.google.android.gms.iid.InstanceID"/>
+            </intent-filter>
+        </service>
+
 
         <!--Приведенная ниже херь, есть результат внедрения appodeal, и при удалении этой рекломной сети-->
         <!--все это нужно выпилить, быстро, решительно!-->
