--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -206,7 +206,8 @@
             android:theme="@style/Theme.Transparent" />
         <activity
             android:name=".ui.GiftsActivity"
-            android:theme="@style/Theme.Topface.Gifts" />
+            android:theme="@style/Theme.Topface.Gifts"
+            android:windowSoftInputMode="stateAlwaysHidden"/>
         <activity android:name=".ui.TopfaceAuthActivity" />
         <activity
             android:name=".ui.CitySearchActivity"
