--- a/build.gradle
+++ b/build.gradle
@@ -288,6 +288,8 @@ dependencies {
     //Animations: NineOldAndroids, ListViewAnimations
     compile 'com.nineoldandroids:library:2.4.0'
     compile 'com.nhaarman.listviewanimations:lib-core:3.1.0@aar'
+    //Adjust sdk
+    compile 'com.adjust.sdk:adjust-android:4.6.0'
     //LeakCanary
     debugCompile 'com.squareup.leakcanary:leakcanary-android:1.4-beta1'
     releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.4-beta1'
