--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -470,7 +470,8 @@
         </receiver>
 
         <receiver
-            android:name="com.appsflyer.MultipleInstallBroadcastReceiver"
+            android:name="com.topface.topface.receivers.InstallReceiver"
+            android:enabled="true"
             android:exported="true"
             tools:ignore="ExportedReceiver">
             <intent-filter>
@@ -480,23 +481,6 @@
 
         <service android:name="com.google.android.gms.analytics.CampaignTrackingService" />
 
-        <receiver
-            android:name="com.google.android.gms.analytics.CampaignTrackingReceiver"
-            android:exported="true"
-            tools:ignore="ExportedReceiver">
-            <intent-filter>
-                <action android:name="com.android.vending.INSTALL_REFERRER" />
-            </intent-filter>
-        </receiver>
-
-        <receiver
-            android:name="com.sponsorpay.advertiser.InstallReferrerReceiver"
-            android:exported="true"
-            tools:ignore="ExportedReceiver">
-            <intent-filter>
-                <action android:name="com.android.vending.INSTALL_REFERRER" />
-            </intent-filter>
-        </receiver>
         <receiver
             android:name=".receivers.NotificationClosedReceiver"
             tools:ignore="ExportedReceiver">
@@ -634,15 +618,7 @@
                 android:name="metrica:api:level"
                 android:value="39" />
         </service>
-        <receiver
-            android:name="com.yandex.metrica.MetricaEventHandler"
-            android:enabled="true"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="com.android.vending.INSTALL_REFERRER" />
-            </intent-filter>
-        </receiver>
-        <!--suppress AndroidDomInspection -->
+
         <activity
             android:name="com.yandex.mobile.ads.AdActivity"
             android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize" />
