--- a/build.gradle
+++ b/build.gradle
@@ -155,9 +155,9 @@ android {
             keyPassword "Sonetica2012"
         }
         ok {
-            storeFile file("misc/keys/topface.keystore")
+            storeFile file("misc/keys/topfaceOK.keystore")
             storePassword "Sonetica2012"
-            keyAlias "topface"
+            keyAlias "topfaceok"
             keyPassword "Sonetica2012"
         }
         blueStacks {
