--- a/build.gradle
+++ b/build.gradle
@@ -266,6 +266,8 @@ dependencies {
     compile name: 'appsflyer'
     compile name: 'comscore'
     compile name: 'offerwalls_sponsorpay'
+    // flurry analytics
+    compile 'com.flurry.android:analytics:6.2.0'
 
     //Topface sub libs
     compile project(':libs:IllustratedTextView')
