--- a/build.gradle
+++ b/build.gradle
@@ -49,8 +49,7 @@ buildscript {
     }
     dependencies {
         classpath rootProject.ANDROID_BUILD_GRADLE_PLUGIN_VERSION
-        classpath 'com.jakewharton.sdkmanager:gradle-plugin:0.12.0'
-        classpath 'com.android.databinding:dataBinder:1.0-rc2'
+        // classpath 'com.jakewharton.sdkmanager:gradle-plugin:0.12.0'
     }
 }
 
@@ -65,14 +64,24 @@ allprojects {
         }
     }
 }
+/*
 
-apply plugin: 'android-sdk-manager'
+    <uses-sdk android:minSdkVersion="5" />
+
+
+ */
+
+//apply plugin: 'android-sdk-manager'
 apply plugin: 'com.android.application'
-apply plugin: 'com.android.databinding'
 
 android {
     compileSdkVersion Integer.parseInt(rootProject.ANDROID_BUILD_MAX_SDK_VERSION)
     buildToolsVersion rootProject.ANDROID_BUILD_TOOLS_VERSION
+
+    dataBinding {
+        enabled = true
+    }
+
 
     productFlavors {
         //Основной flavor, в нашем случае работает с Google Play
@@ -80,10 +89,10 @@ android {
             buildConfigField "String", "STATISTICS_APP", "\"topfacemobappandroid\"";
         }
         //flavor для версии приложения для Amazon
-        amazon {
+        /*amazon {
             buildConfigField "com.topface.billing.MarketApiType", "MarketApiType", "com.topface.billing.MarketApiType.AMAZON";
             buildConfigField "String", "STATISTICS_APP", "\"topfacemobappamazon\"";
-        }
+        }*/
         //flavor для версии приложения для Nokia X
         //Пока не используется, поэтому закоментирован
         /*nokia {
@@ -276,7 +285,7 @@ dependencies {
         exclude group: 'com.android.support'
     }
     googleCompile name: 'ads_adman_2.2.7'
-    amazonCompile name: 'ads_adman_2.2.7'
+    // amazonCompile name: 'ads_adman_2.2.7'
     compile name: 'appsflyer'
     compile name: 'comscore'
     compile name: 'offerwalls_sponsorpay'
@@ -304,7 +313,7 @@ dependencies {
     //View Bind
     compile 'com.jakewharton:butterknife:7.0.1'
     //Для Амазона нужна библиотека для поддержки in-app покупок
-    amazonCompile 'com.amazon:in-app-purchasing:2.0.1'
+    // amazonCompile 'com.amazon:in-app-purchasing:2.0.1'
     //RxJava
     compile 'io.reactivex:rxandroid:1.0.0'
     //Dagger
@@ -317,9 +326,9 @@ dependencies {
     compile 'com.nineoldandroids:library:2.4.0'
     compile 'com.nhaarman.listviewanimations:lib-core:3.1.0@aar'
     //LeakCanary
-    debugCompile 'com.squareup.leakcanary:leakcanary-android:1.4-beta1'
-    releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.4-beta1'
-    qaCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.4-beta1'
+    debugCompile 'com.squareup.leakcanary:leakcanary-android:1.3'
+    releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.3'
+    qaCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.3'
     ifreeCompile('com.ifree.monetize:monetization-library:2.2.5') {
         exclude group: "com.fasterxml.jackson.core"
         exclude module: "support-v4"
@@ -376,6 +385,11 @@ subprojects {
     android {
         compileSdkVersion Integer.parseInt(rootProject.ANDROID_BUILD_MAX_SDK_VERSION)
         buildToolsVersion rootProject.ANDROID_BUILD_TOOLS_VERSION
+
+        lintOptions {
+            ignore "MissingTranslation"
+//Об отсутсвующих переводах. У нас есть всегда языки без переводов
+        }
     }
 }
 
