--- a/gradle.properties
+++ b/gradle.properties
@@ -17,6 +17,6 @@ ANDROID_BUILD_SUPPORT_LIBRARY_VERSION=com.android.support:support-v4:22.2.1
 ANDROID_BUILD_SUPPORT_APPCOMPAT_VERSION=com.android.support:appcompat-v7:22.2.0
 ANDROID_BUILD_DESIGN_SUPPORT_VERSION=com.android.support:design:22.2.0
 ANDROID_BUILD_ANNOTATIONS_SUPPORT_VERSION=com.android.support:support-annotations:22.2.0
-#org.gradle.daemon=true
+org.gradle.daemon=true
 org.gradle.parallel=true
 manifestmerger.enabled = true
