--- a/build.gradle
+++ b/build.gradle
@@ -333,7 +333,7 @@ dependencies {
     //Adjust sdk
     compile 'com.adjust.sdk:adjust-android:4.6.0'
     //LeakCanary
-    debugCompile 'com.squareup.leakcanary:leakcanary-android:1.3'
+    debugCompile 'com.squareup.leakcanary:leakcanary-android:1.4-beta2'
     releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.3'
     qaCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.3'
     ifreeCompile('com.ifree.monetize:monetization-library:2.2.5') {
