--- a/build.gradle
+++ b/build.gradle
@@ -291,7 +291,7 @@ dependencies {
     compile fileTree(dir: 'libs', exclude: 'amazon/*.jar', include: '*.jar')
     //Testing
     testCompile 'junit:junit:4.12'
-    testCompile "org.mockito:mockito-core:1.10.19"
+    testCompile "org.mockito:mockito-core:2.0.5-beta"
     testCompile('org.robolectric:robolectric:2.4') {
         exclude group: 'com.android.support'
     }
