--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -247,8 +247,8 @@
         <activity
             android:name=".ui.UserProfileActivity"
             android:parentActivityName=".ui.NavigationActivity"
-            android:windowSoftInputMode="stateAlwaysHidden"
-            android:theme="@style/NoWindowAnimation">
+            android:theme="@style/NoWindowAnimation"
+            android:windowSoftInputMode="stateAlwaysHidden">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".ui.NavigationActivity" />
@@ -422,9 +422,8 @@
             </intent-filter>
         </receiver>
 
-        <!--AdWords-->
         <receiver
-            android:name="com.google.ads.conversiontracking.InstallReceiver"
+            android:name="com.appsflyer.MultipleInstallBroadcastReceiver"
             android:exported="true"
             tools:ignore="ExportedReceiver">
             <intent-filter>
@@ -432,8 +431,9 @@
             </intent-filter>
         </receiver>
 
+        <!--AdWords-->
         <receiver
-            android:name="com.appsflyer.MultipleInstallBroadcastReceiver"
+            android:name="com.google.ads.conversiontracking.InstallReceiver"
             android:exported="true"
             tools:ignore="ExportedReceiver">
             <intent-filter>
@@ -503,6 +503,7 @@
             <intent-filter>
                 <action android:name="com.google.android.c2dm.intent.RECEIVE" />
                 <action android:name="com.google.android.c2dm.intent.REGISTRATION" />
+
                 <category android:name="com.topface.topface" />
             </intent-filter>
         </receiver>
@@ -545,6 +546,9 @@
 
         <activity
             android:name="com.facebook.ads.InterstitialActivity"
+            android:configChanges="keyboardHidden|orientation|screenSize" />
+        <activity
+            android:name="com.facebook.ads.InterstitialAdActivity"
             android:configChanges="keyboardHidden|orientation|screenSize" />
         <activity
             android:name="com.vungle.publisher.FullScreenAdActivity"
