#49965: send request throw retrofit

--- a/build.gradle
+++ b/build.gradle
@@ -360,6 +360,8 @@ dependencies {
 
     // Offerwalls
     compile 'com.supersonic.sdk:mediationsdk:6.4.7@jar'
+
+    compile 'com.squareup.retrofit2:retrofit:2.1.0'
 }
 
 project(':libs:IllustratedTextView') {
