--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -98,6 +98,7 @@
         <activity
             android:name=".ui.NavigationActivity"
             android:theme="@style/Theme.Topface.Navigation"
+            android:configChanges="orientation|screenSize"
             android:windowSoftInputMode="adjustResize">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
